Fix selector for inheriting animation rules Been having difficulty getting this to work correctly. Since SVGs are elements that can be styled with CSS, some of them have been distorted by some rules due to transforms having their origins changed.
Just don't apply to `<use>` and we'll only have to wory about the
occasional inline SVG.

--- a/animations.css
+++ b/animations.css
@@ -3,7 +3,7 @@
 	animation-duration: var(--animation-duration, 400ms);
 }
 
-*:not(svg *) {
+*:not(use) {
 	transform-origin: inherit;
 	transition-duration: inherit;
 	animation-play-state: inherit;
